--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,8 @@ $blue:       #0091ed;
 $orange:     #ca6c18;
 $red:        #b6321c;
 
+
+$background-image:  url('/background.jpg');
 $background:        $grey-vlight;
 $dark-background:   darken($background, 5%);
 $text-color:        $grey-vdark;
