--- a/css/main.scss
+++ b/css/main.scss
@@ -10,17 +10,16 @@ $vsmall-font-size: 0.66em;
 $base-line-height: 1.5;
 $spacing-unit:     1.5em;
 
-$grey-vlight:#eee;
-$grey-light: #ccc;
-$grey:       #888;
+$grey-vlight:#5B008F;
+$grey-light: #5B008F;
+$grey:       #ADA3AF;
 $grey-dark:  #444;
-$grey-vdark: #222;
+$grey-vdark: #ADA3AF;
 $blue:       #0091ed;
 $orange:     #ca6c18;
 $red:        #b6321c;
 
 
-$background-image:  url('/background.jpg');
 $background:        $grey-vlight;
 $dark-background:   darken($background, 5%);
 $text-color:        $grey-vdark;
